package app.model.CapaEntidades;

public class Imagen {

    public Imagen() {
    }

    private String rutaImagen;

    public Imagen(String rutaImagen) {
        this.rutaImagen = rutaImagen;
    }

    public String getRutaImagen() {
        return rutaImagen;
    }

    public void setRutaImagen(String rutaImagen) {
        this.rutaImagen = rutaImagen;
    }
}
