@startuml

skinparam DefaultFontName Arial
skinparam ClassBackgroundColor #E8F4F8
skinparam ClassBorderColor #2C3E50
skinparam noteBackgroundColor #FDEDEC
skinparam noteBorderColor #E74C3C

title <size:25> Diagrama de Clases HU1: Registro de Identidad y Catálogo de Talentos

package "Capa de Entidades" {

    class Usuario {
        - idUsuario: String
        - nombre: String
        - correoElectronico: String
        - telefono: String
        - descripcionPersonal: String
        - reputacionHistorica: Double
        - sancion
        <space:10> sancionActiva: Boolean
        <space:10> fechaSancion: Date
        + Usuario(nombre: String, correo: String, telefono: String, descripcionPersonal: String, imagen: Imagen)
    }

    class Monedero {
        - creditosDisponibles: int
        - creditosComprometidos: int
        + tieneFondosSuficiente(monto: int): Boolean
        + calcularCreditosComprometidos(monto: int): Void
        + Monedero()
    }

    class Habilidad {
        - nombre: String
        - precioCreditos: int
        - descripcionHabilidad: String
        + Habilidad(nombre: String, precioCreditos: int, descripcion: String)
    }

    class Necesidad {
        - nombre: String
        - descripcionNecesidad: String
        + Necesidad(nombre: String, descripcion: String)
    }

    class Imagen {
        - ruta: String
        + Imagen(ruta: String)
    }

    class Notificacion {
        - idNotificacion: String
        - mensaje: String
        - tipo: String
        - estadoLectura: boolean
        + marcarNotificacionLeida(): void
    }

    Usuario "1" *-- "1" Monedero
    Usuario "1" *-- "*" Habilidad
    Usuario "1" *-- "*" Necesidad
    Usuario "1" *-- "1" Imagen
    Usuario "1" -- "*" Notificacion : posee >
}


package "Capa de Gestión" {

    class GestionUsuario {
        + registrarUsuario(nombre: String, correo: String, telefono: String, descripcionPersonal: String, foto: String): Void
        + registrarUsuario(usuario: Usuario): Void
        + calcularReputacionHistorica(idUsuario: String): Void
        + calcularReputacionServicio(idUsuario: String, nombreServicio: String, calificacion: int): Void
        + buscarUsuario(idUsuario: String): Usuario
        + modificarDatosUsuario(idUsuario: String, nuevoNombre: String, nuevoTelefono: String, nuevaDescripcion: String): Void
    }

    GestionUsuario --> Usuario

}

package "Capa de Persistencia" {

    class PersistenciaUsuario {
        - RUTA_ARCHIVO: String = "data/usuarios.json"
        + cargar(): List<Usuario>
        + guardar(datos: List<Usuario>): Void
    }

    class PersistenciaCatalogo {
        + cargar(): List<Habilidad>
        + guardar(datos: List<Habilidad>): Void
    }
}


@enduml